src/test/ui/const-generics/params-in-ct-in-ty-param-lazy-norm.min.stderr
error: using type defaults and const parameters in the same parameter list is currently not permitted
  --> $DIR/params-in-ct-in-ty-param-lazy-norm.rs:11:31
   |
LL | struct Bar<T = [u8; N], const N: usize>(T);
   |                               ^

error: const parameters must be declared prior to defaulted parameters
  --> $DIR/params-in-ct-in-ty-param-lazy-norm.rs:11:31
   |
LL | struct Bar<T = [u8; N], const N: usize>(T);
   |           --------------------^-------- help: reorder the parameters: `<const N: usize, T = [u8; N]>`
   |
   = note: the expected order for parameters is: lifetimes, then types, then consts, then defaulted parameters

error: generic parameters may not be used in const operations
  --> $DIR/params-in-ct-in-ty-param-lazy-norm.rs:6:44
   |
LL | struct Foo<T, U = [u8; std::mem::size_of::<T>()]>(T, U);
   |                                            ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: constant values inside of type parameter defaults must not depend on generic parameters
  --> $DIR/params-in-ct-in-ty-param-lazy-norm.rs:11:21
   |
LL | struct Bar<T = [u8; N], const N: usize>(T);
   |                     ^ the anonymous constant must not depend on the parameter `N`

error: aborting due to 4 previous errors

